apps/photoview/photoview/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photoview
  namespace: photoview
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: photoview
  template:
    metadata:
      labels:
        app: photoview
    spec:
      containers:
        - name: photoview
          image: viktorstrate/photoview
          ports:
            - name: photoview
              containerPort: 80
              hostPort: 80
          volumeMounts:
            - name: cache
              mountPath: /app/cache
            - name: media
              mountPath: /photos
              subPath: jonatan/Pictures
          resources:
            limits:
              gpu.intel.com/i915: 1
      volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: photoview-cache
        - name: media
          nfs:
            server: 10.0.0.11
            path: /tank/home
            readOnly: true
