apps/photoview/photoview/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photoview
  namespace: photoview
  annotations:
    external-dns.alpha.kubernetes.io/my-target: internal
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/16
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - photoview.k8s.jsteuernagel.de
      secretName: photoview-k8s-jsteuernagel-de-tls
  rules:
    - host: photoview.k8s.jsteuernagel.de
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: photoview-service
                port:
                  number: 80
